# Arandu-Lang

./: .gitattributes  .gitignore  ARCHITECTURAL_REVIEW.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  arandu-grammar-v0.6.ebnf  clippy.toml  deny.toml
arandu_fuzz/: Cargo.toml
arandu_fuzz/corpus/fuzz_lex/: control.txt
arandu_fuzz/corpus/fuzz_parse/: if_return.aru  minimal.aru  while_string.aru
arandu_fuzz/fuzz_targets/: fuzz_lex.rs  fuzz_lex_simd.rs  fuzz_parse.rs  fuzz_parse_structured.rs
crates/arandu_backend_c/: Cargo.toml
crates/arandu_backend_c/src/: emitter.rs  lib.rs
crates/arandu_backend_c/src/emitter/: expr.rs  format.rs  mod.rs  stmt.rs
crates/arandu_backend_c/tests/: parity_tests.rs
crates/arandu_backend_cranelift/: Cargo.toml
crates/arandu_backend_cranelift/src/: abi.rs  gen_runtime.rs  jit.rs  lib.rs  os_runtime.rs  poll_runtime.rs  reactor_runtime.rs  rt_runtime.rs  socket_runtime.rs  supervisor_runtime.rs  to_str_runtime.rs  translator.rs  types.rs  vec_runtime.rs  waker_runtime.rs
crates/arandu_backend_cranelift/src/translator/: call.rs  compare.rs  coroutine.rs  expr.rs  memory.rs  mod.rs  operand.rs  place.rs  stmt.rs  string.rs  terminator.rs
crates/arandu_backend_cranelift/tests/: jit_tests.rs
crates/arandu_base/: Cargo.toml
crates/arandu_base/src/: arena.rs  bitset.rs  index_vec.rs  lib.rs  line_index.rs  perf.rs  scratch.rs  source_registry.rs  span.rs  stable_id.rs  string_pool.rs  tracing_bridge.rs  vm.rs
crates/arandu_cli/: Cargo.toml
crates/arandu_cli/src/: main.rs  project.rs  watch.rs
crates/arandu_cli/tests/: cli_autoref.rs  cli_minimal_gold.rs  cli_opt_await_suspend.rs  cli_opt_while_backedge.rs  cli_option_nil.rs  cli_project_gold.rs  cli_smoke.rs  cli_syn1_match_join.rs  cli_syn2_syn4.rs  cli_typ2_sls.rs  cli_vec_defaults.rs  cli_while_mut_backedge.rs
crates/arandu_diagnostics/: Cargo.toml  build.rs
crates/arandu_diagnostics/src/: lib.rs  registry.rs
crates/arandu_lexer/: Cargo.toml
crates/arandu_lexer/src/: error.rs  lexer.rs  lib.rs  token.rs  token_name.rs
crates/arandu_lexer/src/lexer/: comment.rs  ident.rs  numeric.rs  punctuation.rs  string.rs
crates/arandu_lexer/src/simd/: avx2.rs  mod.rs  neon.rs  scalar.rs  sse2.rs
crates/arandu_lexer/tests/: examples_smoke.rs  lexer_contract.rs  lexer_golden.rs
crates/arandu_lsp/: Cargo.toml
crates/arandu_lsp/src/: conv.rs  ide.rs  main.rs  pool.rs  state.rs  uri_util.rs  vfs.rs
crates/arandu_middle/: Cargo.toml
crates/arandu_middle/src/: amir_validate.rs  cfg.rs  codegen.rs  db.rs  diagnostics.rs  ice.rs  lib.rs  literal_pool.rs  ops.rs  parse_cache.rs  resolved.rs  session.rs  stdlib_cache.rs  symbol_table.rs
crates/arandu_middle/src/amir/: block.rs  dominators.rs  local.rs  mod.rs  pretty.rs  program.rs  reachability.rs  rpo.rs  stmt.rs  value.rs  visit.rs
crates/arandu_middle/src/hir/: mod.rs  pattern.rs  pool.rs  pretty.rs
crates/arandu_middle/src/layout/: data_layout.rs  mod.rs  tests.rs
crates/arandu_middle/src/types/: ar_type.rs  lower.rs  mod.rs  primitive.rs  result_option.rs  subst.rs  type_interner.rs  unify.rs  unify_tests.rs
crates/arandu_mir/: Cargo.toml
crates/arandu_mir/src/: borrow_check.rs  borrow_check_tests.rs  borrow_facts.rs  borrow_facts_tests.rs  dce.rs  definite_init.rs  escape_analysis.rs  gen_promote.rs  lib.rs  liveness.rs  liveness_tests.rs  move_checker.rs  move_checker_tests.rs  optimize.rs  pin_free.rs  sccp.rs  simplify_cfg.rs  suspend_check.rs
crates/arandu_mir/src/lower_amir/: arg_modes.rs  ctx.rs  expr.rs  flow.rs  func.rs  match_lower.rs  mod.rs  ops.rs  pattern.rs  place.rs  ssa.rs  stmt.rs
crates/arandu_parser/: Cargo.toml
crates/arandu_parser/src/: lib.rs  tests.rs
crates/arandu_parser/src/ast/: ast_pool.rs  decl.rs  dump.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  types.rs
crates/arandu_parser/src/parser/: decl.rs  error.rs  expr.rs  mod.rs  pattern.rs  stmt.rs  types.rs
crates/arandu_parser/src/syntax/: build.rs  events.rs  highlight.rs  incremental.rs  kind.rs  lower.rs  mod.rs
crates/arandu_parser/tests/: examples_smoke.rs  hand_cov.rs  match_ok_bare.rs  parser_contract.rs  parser_golden.rs  struct_lit_shape.rs
crates/arandu_query/: Cargo.toml
crates/arandu_query/src/: analysis.rs  dataflow.rs  db.rs  debounce.rs  doc_store.rs  edit_vfs.rs  explain.rs  highlight.rs  lib.rs  manifest.rs  passes.rs  stable_hash.rs  stdlib.rs  vfs.rs  watch_buf.rs
crates/arandu_query/tests/: accumulator_cache.rs  architecture_invariants.rs  block_delta.rs  concurrent_salsa.rs  cst_pipeline.rs  dependency_graph.rs  empty_struct_mf.rs  explain_rebuild.rs  export_privacy.rs  file_highlights.rs  ide_diag_delta.rs  indirect_call.rs  item_body_cutoff.rs  package_modules_l2.rs  path_resolution.rs  perf.rs  salsa_cutoff.rs  salsa_imports.rs  syntax_tree.rs  variant_sugar.rs  watch_session_l2.rs
crates/arandu_resolve/: Cargo.toml
crates/arandu_resolve/src/: import_path.rs  lib.rs  module_loader.rs
crates/arandu_resolve/src/name_resolution/: collect.rs  decls.rs  expr.rs  mod.rs  program.rs  stmt.rs  symbols.rs  tests.rs  types.rs  util.rs
crates/arandu_semantics/: Cargo.toml
crates/arandu_semantics/src/: amir.rs  amir_validate.rs  arena.rs  bitset.rs  cfg.rs  diagnostics.rs  index_vec.rs  layout.rs  lib.rs  literal_pool.rs  parallel.rs  resolved.rs  stable_id.rs  string_pool.rs  symbol_table.rs  vm.rs
crates/arandu_semantics/src/amir/: block.rs  dominators.rs  local.rs  mod.rs  pretty.rs  program.rs  reachability.rs  stmt.rs  value.rs
crates/arandu_semantics/src/hir/: mod.rs  pattern.rs  pool.rs  pretty.rs
crates/arandu_semantics/src/passes/: definite_init.rs  lower_amir.rs  lower_hir.rs  lowering.rs  mod.rs  monomorphize.rs  move_checker.rs  name_resolution.rs  optimize.rs
crates/arandu_semantics/tests/: amir.rs  hir.rs  m2_borrow.rs  mono_method.rs  name_resolution.rs  parallel.rs  recovery.rs  root_cause_frontend.rs  type_checker.rs
crates/arandu_typeck/: Cargo.toml
crates/arandu_typeck/src/: lib.rs
docs/: arandu-abi-layout-v0.1.md  (+26 more)
xtask/: Cargo.toml
xtask/src/: main.rs
(+582 files in other folders)
