[workspace]
exclude = ["arandu_fuzz"]
members = [
    "crates/arandu_base",
    "crates/arandu_lexer",
    "crates/arandu_diagnostics",
    "crates/arandu_parser",
    "crates/arandu_middle",
    "crates/arandu_resolve",
    "crates/arandu_typeck",
    "crates/arandu_mir",
    "crates/arandu_semantics",
    "crates/arandu_cli",
    "crates/arandu_backend_cranelift",
    "crates/arandu_test_support",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Arandu Language Contributors"]

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[workspace.lints]
# Intentionally empty: use default toolchain lint levels.

[workspace.lints.clippy]
# No clippy overrides.
