[workspace]
exclude = ["arandu_fuzz"]
members = [
    "crates/arandu_base",
    "crates/arandu_lexer",
    "crates/arandu_diagnostics",
    "crates/arandu_parser",
    "crates/arandu_middle",
    "crates/arandu_resolve",
    "crates/arandu_typeck",
    "crates/arandu_mir",
    "crates/arandu_semantics",
    "crates/arandu_cli",
    "crates/arandu_backend_cranelift",
    "crates/arandu_test_support",
    "crates/arandu_backend_c",
    "crates/arandu_query",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Arandu Language Contributors"]

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
salsa = "0.27.2"                                                               # Salsa's new version (salsa-2022 tracked-based macro API)
blake3 = "1.8.5"
smol_str = "0.3.1"
smallvec = "1.13.2"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "1.0.56"
petgraph = "0.6.4"

[workspace.lints]
# Intentionally empty: use default toolchain lint levels.

[workspace.lints.clippy]
# No clippy overrides.
