[workspace]
exclude = ["arandu_fuzz"]
members = [
    "crates/arandu_base",
    "crates/arandu_lexer",
    "crates/arandu_diagnostics",
    "crates/arandu_parser",
    "crates/arandu_middle",
    "crates/arandu_resolve",
    "crates/arandu_typeck",
    "crates/arandu_mir",
    "crates/arandu_semantics",
    "crates/arandu_cli",
    "crates/arandu_backend_cranelift",
    "crates/arandu_test_support",
    "crates/arandu_backend_c",
    "crates/arandu_query",
    "crates/arandu_lsp",
    "crates/arandu_fmt",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
authors = ["Arandu Language Contributors"]

[workspace.dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
salsa = "0.27.2" # Salsa's new version (salsa-2022 tracked-based macro API)
blake3 = "1.8.5"
smol_str = "0.3.6"
smallvec = "1.15.2"
rustc-hash = "2.1.3"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2.0.18"
petgraph = "0.8.3"
slotmap = "1.1.1"
lsp-server = "0.9.0"
lsp-types = "0.97.0"
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rowan = "0.16.1"
bumpalo = "3.20.3"

[workspace.lints]
# Intentionally empty: use default toolchain lint levels.

[workspace.lints.clippy]
# U0 hygiene gate (plan: unwrap/clone root fix). Start as warn workspace-wide;
# crates that finished U1 set deny locally (backend_c, cli, …).
unwrap_used = "warn"
expect_used = "warn"
