[package]
name = "arandu_backend_cranelift"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
arandu_base = { path = "../arandu_base" }
arandu_semantics = { path = "../arandu_semantics" }
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
target-lexicon = "0.13.5"
rustc-hash = "2.1.2"
tracing.workspace = true

[dev-dependencies]
arandu_parser = { path = "../arandu_parser" }
