[package]
name = "arandu_backend_cranelift"
version = "0.0.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
arandu_base = { path = "../arandu_base" }
arandu_semantics = { path = "../arandu_semantics" }
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
target-lexicon = "0.13.5"
rustc-hash = { workspace = true }
tracing.workspace = true
# SL_R.2 reactor (epoll + timerfd on Linux); SL_R.3 io_uring when available
libc = "0.2"
io-uring = "0.7"

[dev-dependencies]
arandu_parser = { path = "../arandu_parser" }
