[package]
name = "arandu_backend_cranelift"
version = "0.0.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
arandu_base = { path = "../arandu_base" }
arandu_semantics = { path = "../arandu_semantics" }
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-native = "0.133.1"
target-lexicon = "0.13.5"
rustc-hash = { workspace = true }
tracing.workspace = true
# SL_R.2 reactor (epoll + timerfd on Linux); portable fallback elsewhere
libc = "0.2"

# SL_R.3 io_uring is Linux-only (MAP_POPULATE / SYS_io_uring_*). Do not pull
# this crate on macOS/Windows or install-smoke matrix builds fail to compile.
# Code paths are already #[cfg(target_os = "linux")]; keep the dep gated too.
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
arandu_parser = { path = "../arandu_parser" }
