[package]
name = "arandu_base"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[features]
default = ["vm"]
vm = ["dep:libc"]

[dependencies]
rustc-hash = "2.1"
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory"] }
