[package]
name = "arandu_cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_parser = { path = "../arandu_parser" }
arandu_semantics = { path = "../arandu_semantics" }
arandu_backend_cranelift = { path = "../arandu_backend_cranelift" }
arandu_backend_c = { path = "../arandu_backend_c" }
arandu_query = { path = "../arandu_query" }
arandu_fmt = { path = "../arandu_fmt" }

arandu_middle = { path = "../arandu_middle" }
arandu_base = { path = "../arandu_base" }
tracing.workspace = true
rayon = "1.12.0"
miette = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }

