[package]
name = "arandu_diagnostics"
version = "0.0.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arandu_base = { path = "../arandu_base" }
miette = { workspace = true }
thiserror = { workspace = true }



