[package]
name = "arandu_lexer"
version = "0.0.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
arandu_base = { path = "../arandu_base" }

[dev-dependencies]
arandu_test_support = { path = "../arandu_test_support" }
