[package]
name = "arandu_middle"
version = "0.0.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_parser = { path = "../arandu_parser" }
arandu_diagnostics = { path = "../arandu_diagnostics" }
arandu_base = { path = "../arandu_base" }
smallvec = { workspace = true }
rustc-hash = { workspace = true }
tracing.workspace = true
salsa = { workspace = true }
smol_str.workspace = true

[lib]
path = "src/lib.rs"
