[package]
name = "arandu_mir"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_middle = { path = "../arandu_middle" }
arandu_typeck = { path = "../arandu_typeck" }
rustc-hash = "2.1.2"
smallvec = "1.15.2"
tracing.workspace = true

[lib]
path = "src/lib.rs"
