[package]
name = "arandu_mir"
version = "0.0.1"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_middle = { path = "../arandu_middle" }
arandu_typeck = { path = "../arandu_typeck" }
rustc-hash = { workspace = true }
smallvec = { workspace = true }
smol_str.workspace = true
tracing.workspace = true
bumpalo = { workspace = true, features = ["collections"] }

[lib]
path = "src/lib.rs"
