[package]
name = "arandu_parser"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_diagnostics = { path = "../arandu_diagnostics" }
arandu_base = { path = "../arandu_base" }


[lib]
path = "src/lib.rs"
