[package]
name = "arandu_parser"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_diagnostics = { path = "../arandu_diagnostics" }
arandu_base = { path = "../arandu_base" }
tracing.workspace = true
smol_str.workspace = true
smallvec.workspace = true
rowan = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
arandu_test_support = { path = "../arandu_test_support" }
