[package]
name = "arandu_query"
version = "0.1.0"
edition = "2021"

[dependencies]
salsa = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
slotmap = { workspace = true }
rustc-hash = { workspace = true }

arandu_base = { path = "../arandu_base" }
arandu_diagnostics = { path = "../arandu_diagnostics" }
arandu_parser = { path = "../arandu_parser" }
arandu_middle = { path = "../arandu_middle" }
arandu_resolve = { path = "../arandu_resolve" }
arandu_typeck = { path = "../arandu_typeck" }
arandu_mir = { path = "../arandu_mir" }
arandu_semantics = { path = "../arandu_semantics" }
petgraph = { workspace = true }
