[package]
name = "arandu_resolve"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_middle = { path = "../arandu_middle" }
arandu_parser = { path = "../arandu_parser" }
tracing.workspace = true
rustc-hash = { workspace = true }
strsim = "0.11.1"
smallvec = { workspace = true }
smol_str.workspace = true

[lib]
path = "src/lib.rs"
