[package]
name = "arandu_semantics"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_parser = { path = "../arandu_parser" }
arandu_diagnostics = { path = "../arandu_diagnostics" }
smallvec = "1.14"
strsim = "0.11.1"
libc = "0.2"
fxhash = "0.2.1"

[lib]
path = "src/lib.rs"
