[package]
name = "arandu_semantics"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_lexer = { path = "../arandu_lexer" }
arandu_parser = { path = "../arandu_parser" }
arandu_middle = { path = "../arandu_middle" }
arandu_resolve = { path = "../arandu_resolve" }
arandu_typeck = { path = "../arandu_typeck" }
arandu_mir = { path = "../arandu_mir" }
arandu_diagnostics = { path = "../arandu_diagnostics" }
arandu_base = { path = "../arandu_base" }

rustc-hash = "2.1.2"
tracing.workspace = true

[lib]
path = "src/lib.rs"

[dev-dependencies]
arandu_test_support = { path = "../arandu_test_support" }
