[package]
name = "arandu_typeck"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
arandu_base = { path = "../arandu_base" }
arandu_lexer = { path = "../arandu_lexer" }
arandu_middle = { path = "../arandu_middle" }
arandu_parser = { path = "../arandu_parser" }
arandu_resolve = { path = "../arandu_resolve" }
rustc-hash = "2.1.2"
smallvec = "1.15.2"
strsim = "0.11.1"

[lib]
path = "src/lib.rs"
